update blog links

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="https://medium.com/@soham.parate" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2024</span>
-							<h3><a href="#">Anomalies of Javascript</a></h3>
+							<h3><a href="https://medium.com/@soham.parate">Anomalies of Javascript</a></h3>
 							<p>
 								JavaScript, like any other programming language, has its fair share of quirks, inconsistencies...</p>
 							<ul class="stuff">
@@ -211,10 +211,10 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<a href="https://medium.com/@soham.parate" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 25th 2024</span>
-							<h3><a href="#">=Memory management in Kotlin</a></h3>
+							<h3><a href="https://medium.com/@soham.parate">Memory management in Kotlin</a></h3>
 							<p>Memory management is a crucial aspect of programming languages, ensuring efficient allocation and deallocation of memory resources. Kotlin, being a modern...</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>1</li>
@@ -226,10 +226,10 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+						<a href="https://medium.com/@soham.parate" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Apr. 01 2024</span>
-							<h3><a href="#">Interpreter vs Compiler</a></h3>
+							<h3><a href="https://medium.com/@soham.parate">Interpreter vs Compiler</a></h3>
 							<p>In the world of programming, two fundamental approaches are used to transform high-level code into machine-executable instructions: interpretation and compilation...</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>3</li>
